--- a/aboutus.html
+++ b/aboutus.html
@@ -87,117 +87,94 @@
 </div>
 
 <div class="main-nav">
-<div class="container">
-<nav class="navbar navbar-expand-md navbar-light ">
-<a class="navbar-brand" href="index.html">
-  <h1><img src="assets/images/logos/logo.jpg" style="width:15%;">LAKHI HIGHTECH LTD</h1>
-<!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
-</a>
-<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
-<ul class="navbar-nav m-auto">
-<li class="nav-item">
-<a href="index.html" class="nav-link active">
-Home
-
-</a>
-
-<li class="nav-item">
-<a href="#" class="nav-link">
-About Us
-<i class='bx bx-caret-down'></i>
-</a>
-<ul class="dropdown-menu">
+  <div class="container">
+  <nav class="navbar navbar-expand-md navbar-light ">
+  <a class="navbar-brand" href="index.html">
+    <h1><img src="assets/images/logos/logo.jpg" style="width:15%;">LAKHI HIGHTECH LTD</h1>
+  <!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
+  </a>
+  <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
+  <ul class="navbar-nav m-auto">
   <li class="nav-item">
-    <a href="aboutus.html" class="nav-link">
-    Who we are
-    </a>
-<li class="nav-item">
-<a href="team.html" class="nav-link">
-Our Team
-</a>
-</li>
-
-</li>
-<li class="nav-item">
-<a href="patnership.html" class="nav-link">
-Partnership
-</a>
-</li>
-
-</li>
-
-</ul>
-</li>
-<li class="nav-item">
-<a href="expertise.html" class="nav-link">
-Expertise
-
-</a>
-</li>
-
-<li class="nav-item">
-  <a href="service.html" class="nav-link">
-products/services
+  <a href="index.html" class="nav-link active">Home
+  </a>
   
+  <li class="nav-item">
+  <a href="aboutus.html" class="nav-link">
+  Clientele 
+  </a> 
+  
+  <li class="nav-item">
+  <a href="expertise.html" class="nav-link">
+  Expertise
   </a>
   </li>
-
+  
   <li class="nav-item">
-    <a href="brands.html" class="nav-link">
-Brands
+    <a href="service.html" class="nav-link">
+  products/services
     
     </a>
     </li>
-
-
-<li class="nav-item">
-<a href="contact.html" class="nav-link">
-Contact
-</a>
-</li>
-</ul>
-<div class="nav-side d-display">
-<div class="nav-side-item">
-<div class="search-box">
-<i class='bx bx-search'></i>
-</div>
-</div>
-<!-- <div class="nav-side-item">
-<div class="get-btn">
-<a href="http://metal-agtech.com/" class="default-btn btn-bg-two border-radius-50">SHOP NOW <i class='bx bx-chevron-right'></i></a>
-</div>
-</div> -->
-</div>
-</div>
-</nav>
-</div>
-</div>
-<div class="side-nav-responsive">
-<div class="container-max">
-<div class="dot-menu">
-<div class="circle-inner">
-<div class="in-circle circle-one"></div>
-<div class="in-circle circle-two"></div>
-<div class="in-circle circle-three"></div>
- </div>
-</div>
-<div class="container">
-<div class="side-nav-inner">
-<div class="side-nav justify-content-center align-items-center">
-<div class="side-nav-item nav-side">
-<div class="search-box">
-<i class='bx bx-search'></i>
-</div>
-<div class="get-btn">
-<a href="contact.html" class="default-btn btn-bg-two border-radius-50">Get A Quote <i class='bx bx-chevron-right'></i></a>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+  
+    <li class="nav-item">
+      <a href="brands.html" class="nav-link">
+  Brands / partners
+      </a>
+      </li>
+  
+  
+  <li class="nav-item">
+  <a href="contact.html" class="nav-link">
+  Contact
+  </a>
+  </li>
+  </ul>
+  <div class="nav-side d-display">
+  <div class="nav-side-item">
+  <div class="search-box">
+  <i class='bx bx-search'></i>
+  </div>
+  </div>
+  <!-- <div class="nav-side-item">
+  <div class="get-btn">
+  <a href="http://metal-agtech.com/" class="default-btn btn-bg-two border-radius-50">SHOP NOW <i class='bx bx-chevron-right'></i></a>
+  </div>
+  </div> -->
+  </div>
+  </div>
+  </nav>
+  </div>
+  </div>
+  <div class="side-nav-responsive">
+  <div class="container-max">
+  <div class="dot-menu">
+  <div class="circle-inner">
+  <div class="in-circle circle-one"></div>
+  <div class="in-circle circle-two"></div>
+  <div class="in-circle circle-three"></div>
+   </div>
+  </div>
+  <div class="container">
+  <div class="side-nav-inner">
+  <div class="side-nav justify-content-center align-items-center">
+  <div class="side-nav-item nav-side">
+  <div class="search-box">
+  <i class='bx bx-search'></i>
+  </div>
+  <div class="get-btn">
+  <a href="contact.html" class="default-btn btn-bg-two border-radius-50">Get A Quote <i class='bx bx-chevron-right'></i></a>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  
+  
 <!-- <div class="inner-banner">
     <div class="container">
     <div class="inner-title text-center">
@@ -244,7 +221,7 @@ Contact
 <div class="inner-banner">
   <div class="container">
   <div class="inner-title text-center">
-  <h3>About us </h3>
+  <h3>Our Clientele </h3>
   <ul>
   <li>
   <a href="index.html">Home</a>
@@ -252,128 +229,14 @@ Contact
   <li>
   <i class='bx bx-chevrons-right'></i>
   </li>
-  <li>Who we are</li>
+  <li>Our Clients</li>
   </ul>
   </div>
   </div>
   <div class="inner-shape">
   <img src="assets/images/shape/inner-shape.png" alt="Images">
   </div>
-  </div>
-
-  <!-- about us section -->
-  
- 
-<!-- end -->
-
-<section class="about-background">
-<div class="banner-area-two">
-  <div class="container-fluid">
-  <div class="container-max">
-  <div class="row align-items-center">
-  <div class="col-lg-5">
-  <div class="banner-content">
-  <h1><span class=" banner-head">Lakhi HighTech Ltd</span> was incorporated by the government of Uganda in 2011 and is one of the leading IT companies to reckon with. Our success is driven by our professionals and their commitment to get results the right way by operating responsibly, executing with excellence, applying latest innovation technologies and capturing opportunities for profitable growth. </h1>
-  <p>
-   and is one of the leading IT companies to reckon with. Our success is driven by our professionals and thier commitment to get results the right way by operating responsibly, executing with exellence
-  </p>
-  <div class="banner-btn">
-  <!-- <a href="#" class="default-btn btn-bg-two border-radius-50">Learn More <i class='bx bx-chevron-right'></i></a>
-  <a href="#" class="default-btn btn-bg-one border-radius-50 ml-20">Get A Quote <i class='bx bx-chevron-right'></i></a> -->
-  </div>
-  </div>
-  </div>
-  <div class="col-lg-7">
-  <div class="banner-img">
-  <img src="assets/images/about/about-img3.jpg" alt="Images">
-  
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  </div>
-  
-  <div class="about-area about-bg pt-100 pb-70">
-  <div class="container">
-  <div class="row align-items-center">
-
-  <div class="col-lg-6">
-  <div class="about-content-2 ml-20">
-  <div class="section-title">
-  <span class="sp-color1">About Us</span>
-  <h2>The Right Partner for Software Innovation</h2>
-  <p>
-   We are a privately owned offshore software company offering software development services. Our offshore software outsourcing services and solutions are designed with a focus on secure, scalable, expandable and reliable business systems. Through our low cost, high quality and reliable offshore software services, we serve our clients giving them value for money and thus client satisfaction.
- Lakhi hightech Ltd. is a company that works in a flexible environment for software development process, adjusting as per our clients' requirements.</p>
-
-  </p>
-  </div>
-  <div class="row">
-  <div class="col-lg-6 col-6">
-  <div class="about-card">
-  <div class="content">
-  <i class="flaticon-practice"></i>
-  <h3>Our Mission</h3>
-  </div>
-  <p>We strive to be the best in our field when it comes to quality, cost efficient IT solutions and client statisfaction</p>
-  </div>
-  </div>
-   <div class="col-lg-6 col-6">
-  <div class="about-card">
-  <div class="content">
-  <i class="flaticon-help"></i>
-  <h3>Our Vision</h3>
-  </div>
-  <p>Our vision is to simply, be the leading seller of software and hardware for all sized business traders in Uganda</p>
-  </div>
-   </div>
-   </div>
-  </div>
-  </div>
-  <div class="col-lg-6">
-    <!-- why choose us -->
-<section class="whyus">
-  <h1>Why choose Lakhi HighTech Ltd</h1>
-  <ol class="ol-cards alternate" >
-      <li style="--ol-cards-color-accent:#f68121">
-          <div class="step"><i class="fab fa-codepen"></i></div>
-          <div class="title">We Value our clients:</div>
-          <div class="content">Quality work is a prerequisite for every task we undertake at Lakhi hightech Ltd. as we consider that "every day counts". And why not; we know that good jobs always bring new clients.</div>
-      </li>
-      <li style="--ol-cards-color-accent:#ed1c24">
-          <div class="step"><i class="fab fa-github"></i></div>
-          <div class="title">We believe in Quality:</div>
-          <div class="content">Excellence and consistency quality at low cost is what drives outsourcing business. And we play by the rules of the game </p>
-          </p>
-          </div>
-      </li>
-      <li style="--ol-cards-color-accent:#582c8b">
-          <div class="step"><i class="fab fa-html5"></i></div>
-          <div class="title">We value our people: </div>
-          <div class="content">We highly value our people and their performance. Lakhi hightech Ltd ensures providing an environment to develop their skills and offers them a rewarding career.</div>
-      </li>
-      <!-- <li style="--ol-cards-color-accent:#0166b4">
-          <div class="step"><i class="fab fa-css3"></i></div>
-          <div class="title">Step Four</div>
-          <div class="content"></div>
-      </li>
-      <li style="--ol-cards-color-accent:#00a560">
-          <div class="step"><i class="fab fa-creative-commons"></i></div>
-          <div class="title">Step Five</div>
-          <div class="content"></div> -->
-      </li>
-  </ol>
-</section>
-    </div>
-    </div>
-  </div>
-  </div>
-  </div>
-  </div>
-
-    <!-- our client section -->
-    
+  </div> 
 
     <!-- 3 column  -->
     <section class="client-box">
