--- a/service.html
+++ b/service.html
@@ -87,91 +87,94 @@
 </div>
 
 <div class="main-nav">
-<div class="container">
-<nav class="navbar navbar-expand-md navbar-light ">
-<a class="navbar-brand" href="index.html">
-  <h1><img src="assets/images/logos/logo.jpg" style="width:15%;">LAKHI HIGHTECH LTD</h1>
-<!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
-</a>
-<div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
-<ul class="navbar-nav m-auto">
-<li class="nav-item">
-<a href="index.html" class="nav-link active">
-Home
-
-</a>
-
-<li class="nav-item">
-<a href="#" class="nav-link">
-About Us
-<i class='bx bx-caret-down'></i>
-</a>
-<ul class="dropdown-menu">
+  <div class="container">
+  <nav class="navbar navbar-expand-md navbar-light ">
+  <a class="navbar-brand" href="index.html">
+    <h1><img src="assets/images/logos/logo.jpg" style="width:15%;">LAKHI HIGHTECH LTD</h1>
+  <!-- <img src="assets/images/logos/logo-1.png" alt="Logo"> -->
+  </a>
+  <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
+  <ul class="navbar-nav m-auto">
   <li class="nav-item">
-    <a href="aboutus.html" class="nav-link">
-    Who we are
-    </a>
-<li class="nav-item">
-<a href="team.html" class="nav-link">
-Our Team
-</a>
-</li>
-
-</li>
-<li class="nav-item">
-<a href="patnership.html" class="nav-link">
-Partnership
-</a>
-</li>
-
-</li>
-
-</ul>
-</li>
-<li class="nav-item">
-<a href="expertise.html" class="nav-link">
-Expertise
-
-</a>
-</li>
-
-<li class="nav-item">
-  <a href="service.html" class="nav-link">
-products/services
+  <a href="index.html" class="nav-link active">Home
+  </a>
   
+  <li class="nav-item">
+  <a href="aboutus.html" class="nav-link">
+  Clientele 
+  </a> 
+  
+  <li class="nav-item">
+  <a href="expertise.html" class="nav-link">
+  Expertise
   </a>
   </li>
-
+  
   <li class="nav-item">
-    <a href="brands.html" class="nav-link">
-Brands
+    <a href="service.html" class="nav-link">
+  products/services
     
     </a>
     </li>
-
-
-<li class="nav-item">
-<a href="contact.html" class="nav-link">
-Contact
-</a>
-</li>
-</ul>
-<div class="nav-side d-display">
-<div class="nav-side-item">
-<div class="search-box">
-<i class='bx bx-search'></i>
-</div>
-</div>
-<!-- <div class="nav-side-item">
-<div class="get-btn">
-<a href="http://metal-agtech.com/" class="default-btn btn-bg-two border-radius-50">SHOP NOW <i class='bx bx-chevron-right'></i></a>
-</div>
-</div> -->
-</div>
-</div>
-</nav>
-</div>
-</div>
+  
+    <li class="nav-item">
+      <a href="brands.html" class="nav-link">
+  Brands / partners
+      </a>
+      </li>
+  
+  
+  <li class="nav-item">
+  <a href="contact.html" class="nav-link">
+  Contact
+  </a>
+  </li>
+  </ul>
+  <div class="nav-side d-display">
+  <div class="nav-side-item">
+  <div class="search-box">
+  <i class='bx bx-search'></i>
+  </div>
+  </div>
+  <!-- <div class="nav-side-item">
+  <div class="get-btn">
+  <a href="http://metal-agtech.com/" class="default-btn btn-bg-two border-radius-50">SHOP NOW <i class='bx bx-chevron-right'></i></a>
+  </div>
+  </div> -->
+  </div>
+  </div>
+  </nav>
+  </div>
+  </div>
+  <div class="side-nav-responsive">
+  <div class="container-max">
+  <div class="dot-menu">
+  <div class="circle-inner">
+  <div class="in-circle circle-one"></div>
+  <div class="in-circle circle-two"></div>
+  <div class="in-circle circle-three"></div>
+   </div>
+  </div>
+  <div class="container">
+  <div class="side-nav-inner">
+  <div class="side-nav justify-content-center align-items-center">
+  <div class="side-nav-item nav-side">
+  <div class="search-box">
+  <i class='bx bx-search'></i>
+  </div>
+  <div class="get-btn">
+  <a href="contact.html" class="default-btn btn-bg-two border-radius-50">Get A Quote <i class='bx bx-chevron-right'></i></a>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  
+  
 <div class="side-nav-responsive">
 <div class="container-max">
 <div class="dot-menu">
